Fix canvas particle distortion.
Fix canvas particle distortion on large pages and dynamically scale particle count based on area

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -52,7 +52,7 @@ body.theme-dark {
   --projects-number-techs-color: #57328a;
   --about-text-color: rgba(255, 255, 255, 0.87);
   --about-image-shadow: rgba(224, 224, 224, 0.9);
-  --canvas-stroke-lines: rgba(200, 200, 200, 0.1);
+  --canvas-stroke-lines: rgba(155, 51, 202, 0.2);
   --canvas-particles: #aaaaaa;
 }
 
@@ -81,7 +81,7 @@ body.theme-light {
   --projects-number-techs-color: #4601a5;
   --about-text-color: rgb(153, 153, 153);
   --about-image-shadow: rgba(118, 118, 118, 1);
-  --canvas-stroke-lines: rgba(18, 18, 18, 0.1);
+  --canvas-stroke-lines: rgba(66, 10, 99, 0.2);
   --canvas-particles: #333333;
 }
 
